Bug 415931 - Kirigami Gallery has Wayland generic icon in task switcher and window decoration
Summary: Kirigami Gallery has Wayland generic icon in task switcher and window decoration
Status: RESOLVED FIXED
Alias: None
Product: kirigami gallery
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-06 14:14 UTC by Patrick Silva
Modified: 2024-08-14 12:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (13.90 KB, image/png)
2020-01-06 14:14 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-06 14:14:06 UTC
Created attachment 124927 [details]
screenshot

STEPS TO REPRODUCE
1. open kirigami gallery on Wayland session
2. 
3. 

OBSERVED RESULT
As we can see in the attached screesnhot, window decoration shows Wayland generic icon

EXPECTED RESULT
the same icon shown in the task manager


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65.0
Qt Version: 5.14.0
Comment 1 Patrick Silva 2020-05-09 19:38:44 UTC
No longer reproducible.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 2 Patrick Silva 2022-11-21 18:39:18 UTC
Can reproduce again.

Operating System: Arch Linux
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 3 Bug Janitor Service 2024-08-14 03:46:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/kirigami-gallery/-/merge_requests/94
Comment 4 Antti Savolainen 2024-08-14 12:30:04 UTC
Git commit 5a74dfbaf0e0fc42cfa5678f2a3d06db82b3e0e3 by Antti Savolainen.
Committed on 14/08/2024 at 03:44.
Pushed by nicolasfella into branch 'master'.

Fix the window icon to not be a generic wayland logo

M  +2    -0    src/main.cpp

https://invent.kde.org/sdk/kirigami-gallery/-/commit/5a74dfbaf0e0fc42cfa5678f2a3d06db82b3e0e3
Comment 5 Nicolas Fella 2024-08-14 12:34:46 UTC
Git commit f03332cf7135fdf8b55b5962c251684322cef69c by Nicolas Fella, on behalf of Antti Savolainen.
Committed on 14/08/2024 at 12:34.
Pushed by nicolasfella into branch 'release/24.08'.

Fix the window icon to not be a generic wayland logo
(cherry picked from commit 5a74dfbaf0e0fc42cfa5678f2a3d06db82b3e0e3)

M  +2    -0    src/main.cpp

https://invent.kde.org/sdk/kirigami-gallery/-/commit/f03332cf7135fdf8b55b5962c251684322cef69c