Fix the window icon to not be a generic wayland logo

BUG: 415931