src/main.cpp
@@ -43,6 +43,8 @@ Q_DECL_EXPORT int main(int argc, char *argv[])
     QGuiApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
     QGuiApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
     QGuiApplication::setApplicationDisplayName(QStringLiteral("Kirigami Gallery"));
+    QGuiApplication::setDesktopFileName(QStringLiteral("org.kde.kirigami2.gallery"));
+
 //The desktop QQC2 style needs it to be a QApplication
 #ifdef Q_OS_ANDROID
     QGuiApplication app(argc, argv);
